--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
             <version>1.3.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.8.2</version>
+        </dependency>
 
     </dependencies>
 
