第六章 Prime Day Sale 优化 - message queue 上

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,7 @@ spring.redis.pool.min-idle=0
 spring.redis.timeout=0
 #spring-session ??
 spring.session.store-type=none
+
+####Rocket MQ ####
+rocketmq.producer.group=orderGroup
+rocketmq.name-server=localhost:9876
