--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,13 @@
             <version>2.8.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
